<resources>
    <string name="app_name">নামায শিক্ষা  দোয়া ও সূরা সমূহ
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasbi_fagar">১। ফজরের নামাজের তাসবিহ
বাংলায় : (হুয়াল হাইয়্যুল কাইয়্যুম।)-তিনি চির জীবিত ও চিরস্থায়ী।</string>
    <string name="tasbi_johor"> ২। জোহরের নামাজের তাসবিহ
বাংলায় : (হুয়াল আলিইয়্যাল আজীম)-তিনি শ্রেষ্ট্রতর অতি মহান।</string>
    <string name="tasbi_asor">  ৩। আছরের নামাজের তাসবিহ
বাংলায় : (হুয়ার রাহমা- নুর রাহীম)-তিনি কৃপাময় ও করুনা নিধান।
</string>
    <string name="tasbi_magrib">
  ৪। মাগরিবের নামায পড়ে পরিবার তাসবিহ
বাংলায় : (হুয়াল গাফুরুর রাহীম)- তিনি মার্জনাকারী ও করুণাময়।</string>
    <string name="tasbi_isea">৫। এশার নামায পড়ে পরিবার তাসবিহ
বাংলায় : (হুয়াল্ লাতিফুল খাবীর)- তিনি পাক ও অতিশয় সতর্কশীল।
</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rojaMakro">

         \n
১. অনাবশ্যক কোনো জিনিস চিবানো বা চাখা।
        \n
২. কোনো দ্রব্য মুখে দিয়ে রাখা।
         \n
৩. গড়গড়া করা বা নাকের ভেতর পানি টেনে নেয়া। কিন্তু পানি যদি নাক দিয়ে গলায় পৌঁছে যায়, তাহলে রোজা ভেঙে যাবে।
         \n
৪. ইচ্ছাকৃত মুখে থুথু জমা করে গিলে খেলে।
         \n
৫. গীবত, গালা-গালি ও ঝগড়া-ফাসাদ করা। কেউ গায়ে পড়ে ঝগড়া-ফাসাদ করতে এলে বলবে, আমি রোজাদার তোমাকে প্রত্যুত্তর দিতে অক্ষম।
         \n
৬. সাড়া দিন নাপাক অবস্থায় থাকা।
         \n
৭. অস্থিরতা ও কাতরতা প্রকাশ করা।
         \n
৮. কয়লা চিবিয়ে অথবা পাউডার, পেস্ট ও মাজন ইত্যাদি দিয়ে দাঁত পরিষ্কার করা।
         \n
    </string>
    <string name="rojafojilot">

১. ফরজ রোজা: ফরজ বা অবশ্য পালনীয় রোজা ৪ প্রকার। ক) রমজান মাসের রোজা খ) কোন কারণ বশত রমজানের রোজা ভঙ্গ হয়ে গেলে তার ক্বাযা আদায়ে রোজা গ) শরীয়তে স্বীকৃত কারণ ব্যতীত রমজানের রোজা ছেড়ে দিলে কাফ্ফারা হিসেবে ৬০টি রোজা রাখা ঘ) রোজার মানত করলে তা আদায় করা।
\n
২.ওয়াজিব রোজা: নফল রোজা রেখে ভঙ্গ করলে পরবর্তীতে তা আদায় করা ওয়াজিব।
\n
৩. সুন্নত রোজা: মহরম মাসের ৯ এবং ১০ তারিখে রোজা রাখা সুন্নত।
\n
৪. মোস্তাহাব রোজা: প্রতি চন্দ্র মাসের ১৩, ১৪, এবং ১৫ তারিখে, প্রতি সপ্তাহের সোম ও বৃহস্পতিবার, কোন কোন ইমামের মতে শাওয়াল মাসে পৃথক পৃথক প্রতি সপ্তাহে ২টি করে ৬টি রোজা রাখা মোস্তাহাব। তবে ইমাম আবু হানিফা (রহ.)-এর মতে, ১ শাওয়াল বা ঈদ-উল- ফিতরের দিন রোজা রাখা যাবে না।
\n
৫. নফল রোজা: মোস্তাহাব আর নফল খুব কাছাকাছির ইবাদত। সহজ অর্থে নফল হলো যা ফরজ, ওয়াজিব, সুন্নত নয় এমন ইবাদত পূণ্যের নিয়তে করা। রোজার ক্ষেত্রেও একই।
\n
পবিত্র রমজানের ফজিলত ও মর্যাদা সম্পর্কে হাদিসের কিতাবগুলোতে অনেক হাদিস বর্ণিত হয়েছে। এর ভেতর থেকে কিছু হাদিস এখানে উল্লেখ করা হলো-
\n
নবী (সা.) এর প্রিয় সাহাবী হযরত আবু হুরায়রা (রা.) বলেছেন, রাসুল (সা.) এরশাদ করেছেন, যখন রমজান মাস আসে আসমানের দরজাগুলো খুলে দেওয়া হয় এবং দোজখের দরজাগুলো বন্ধ করে দেওয়া হয়, আর শয়তানকে শৃঙ্খলিত করা হয়। (বুখারী, মুসলিম)
\n
অপর হাদিসে এসেছে, হযরত সাহ্ল ইবনে সা’দ (রা.) থেকে বর্ণিত, নবী করীম (সা.) এরশাদ করেছেন, বেহেশতের ৮টি দরজা রয়েছে। এর মধ্যে ১টি দরজার নাম রাইয়ান। রোজাদার ব্যতিত আর কেউ ওই দরজা দিয়ে প্রবেশ করতে পারবে না। (বুখারী, মুসলিম)
\n
‘তোমাদের কেউ রোজা রেখে অশ্লীল কথাবার্তায় ও ঝগড়া বিবাদে যেন লিপ্ত না হয়। কেউ তার সঙ্গে গালমন্দ বা ঝগড়া বিবাদ করলে শুধু বলবে, আমি রোজাদার। সেই মহান সত্তার কসম যার করতলগত মুহাম্মদের জীবন, আল্লাহর কাছে রোজাদারের মুখের গন্ধ কস্তুরীর সুঘ্রাণের চেয়েও উত্তম।’
\n
রোজাদারের খুশির বিষয় ২টি- যখন সে ইফতার করে, আর একবার যখন সে তার রবের সঙ্গে সাক্ষাৎ করে রোজার বিনিময় লাভ করবে। (বুখারী)।
\n
পবিত্র রমজান মাস মহান আল্লাহর সঙ্গে প্রিয় বান্দার প্রেম বিনিময়ের সবচেয়ে উত্তম সময়। এই মাসে পবিত্র কোরআন নাজিল হয়েছে। তাই এ মাসের ফজিলত ও মর্যাদা বেড়ে গেছে  আরো বহুগুণ।
\n
 

রমজানের ফজিলত নিয়ে আরো অনেক হাদিস বিভিন্ন সাহাবী থেকে বর্ণিত হয়েছে।
এই মাসে যে ব্যক্তি আল্লাহর নৈকট্য লাভের উদ্দেশে ১টি নফল আমল করল সে ওই ব্যক্তির সমান হলো, যে অন্য মাসে ১টি ফরজ আদায় করলো। আর যে ব্যক্তি এই মাসে ১টি ফরজ আদায় করলো সে ওই ব্যক্তির সমান হলো, যে অন্য মাসে ৭০টি ফরজ আদায় করলো।
এসব শুনে সাহাবীরা বললেন, হে আল্লাহর রাসুল (সা.)! আমাদের প্রত্যেক ব্যক্তি তো এমন সামর্থ্য রাখে না যে রোজাদারকে (তৃপ্তি সহকারে) ইফতার করাবে? রাসুল (সা.) বললেন, আল্লাহ পাক এই সওয়াব দান করবেন যে রোজাদারকে ইফতার করায় এক চুমুক দুধ দিয়ে, অথবা একটি খেজুর দিয়ে, অথবা এক চুমুক পানি দিয়ে। আর যে ব্যক্তি কোনো রোজাদারকে তৃপ্তির সঙ্গে খাওয়ায় আল্লাহ তায়ালা তাকে হাউজে কাউছার থেকে পানি পান করাবেন যার পর জান্নাতে প্রবেশ করা পর্যন্ত সে পুনরায় তৃষ্ণার্ত হবে না।
\n\n
এটা এমন পবিত্র মাসের প্রথম দিক রহমত, মাঝের দিক মাগফিরাত, আর শেষ দিক হচ্ছে দোযখ থেকে মুক্তির। যে ব্যক্তি এই মাসে আপন অধীনস্থ দাস-দাসীদের কাজের বোঝা হালকা করে দেবে মহান আল্লাহ তাকে মাফ করে দেবেন এবং তাকে দোযখ থেকে মুক্তি দান করবেন। (বায়হাকী)
\n\n
নবীর প্রিয় সাহাবী হযরত আবু ওবায়দা (রা.) রমজানের গুরুত্ব সম্পর্কে আরেকটি হাদিস বর্ণনা করেছেন। তিনি বলেন, হুজুর (সা.) এরশাদ করেছেন, রোজা মানুষের জন্য ঢালস্বরুপ যতক্ষণ পর্যন্ত তা ফেড়ে না ফেলা হয় (অর্থাৎ রোজা মানুষের জন্য জাহান্নাম থেকে মুক্তির কারণ হবে যতক্ষণ পর্যন্ত তা নিয়ম অনুযায়ী পালন করা হয়)। (ইবনে মাজাহ, নাসাঈ)
\n\n
সর্বাধিক হাদিস বর্ণনাকারী সাহাবী হযরত আবু হুরায়রা (রা.) থেকে এ সম্পর্কে আরেকটি বর্ণনা এসেছে। তিনি বলেছেন, হুজুর (সা.) এরশাদ করেছেন, অনেক রোজাদার ব্যক্তি এমন রয়েছে যাদের রোজার বিনিময়ে অনাহারে থাকা ব্যতিত আর কিছুই লাভ হয় না। আবার অনেক রাত জাগরণকারী এমন রয়েছে যাদের রাত জাগার কষ্ট ছাড়া আর কিছুই লাভ হয় না। (নেক আমল যদি এখলাস ও আন্তরিকতার সঙ্গে না হয়ে লোক দেখানোর উদ্দেশে হয় তাহলে এর বিনিময়ে কোনো সওয়াব পাওয়া যায় না)। (ইবনে মাজাহ, নাসাঈ)
\n\n
হযরত আবু হুরায়রা (রা.) আরো বলেছেন, নবী করীম (সা.) বলেছেন, যে ব্যক্তি ইচ্ছাকৃতভাবে শরীয়ত সম্মত কোনো কারণ ছাড়া রমজানের একটি রোজাও ভাঙে সে রমজানের বাইরে সারাজীবন রোজা রাখলেও এর বদলা হবে না। (তিরমিযী, আবু দাউদ)
রমজানের ফজিলত সম্পর্কে  বিখ্যাত সাহাবী হযরত আব্দুল্লাহ ইবনে ওমর (রা.) থেকে একটি হাদিস বর্ণিত হয়েছে। তিনি বলেন, নবী করীম (সা.) বলেছেন, রমজানের জন্য বেহেশত সাজানো হয় বছরের প্রথম থেকে পরবর্তী বছর পর্যন্ত। তিনি বলেন, যখন রমজান মাসের প্রথম দিন উপস্থিত হয় বেহেশতের গাছের পাতা হতে আরশের নিচে বড় বড় চোখ বিশিষ্ট হুরদের প্রতি বিশেষ হাওয়া প্রবাহিত হয়। তখন তারা বলে, হে পালনকর্তা! আপনার বান্দাদের মধ্য হতে আমাদের জন্য এমন স্বামী নির্দিষ্ট করুন যাদের দেখে আমাদের চোখ জুড়াবে এবং আমাদের দেখে তাদের চোখ জুড়াবে।
\n\n
মহান আল্লাহ আমাদের সবাইকে পবিত্র রমজানের ফজিলত জেনে বেশি বেশি নেক আমল করার তৌফিক দান করুন।
        \n\n
    </string>
    <string name="rojabongo">
    ১. ইচ্ছাকৃত পানাহার করলে।
        \n
২. স্ত্রী সহবাস করলে।
        \n
৩. কুলি করার সময় হলকের নিচে পানি চলে গেলে (অবশ্য রোজার কথা স্মরণ না থাকলে রোজা ভাঙবে না)।
        \n
৪. ইচ্ছকৃত মুখভরে বমি করলে।
        \n
৫. নস্য গ্রহণ করা, নাকে বা কানে ওষুধ বা তেল প্রবেশ করালে।
        \n
৬. জবরদস্তি করে কেউ রোজা ভাঙালে।
        \n
৭. ইনজেকশান বা স্যালাইনের মাধ্যমে দেহে ওষুধ পৌঁছালে।
        \n
৮. কংকর, পাথর বা ফলের বিচি গিলে ফেললে।
        \n
৯. সূর্যাস্ত হয়েছে মনে করে ইফতার করার পর দেখা গেল সূর্যাস্ত হয়নি।
        \n
১০. পুরা রমজান মাস রোজার নিয়ত না করলে।
        \n
১১. দাঁত থেকে ছোলা পরিমান খাদ্যদ্রব্য গিলে ফেললে।
        \n
১২. ধূমপান করা, ইচ্ছাকৃত লোবান বা আগরবাতি জ্বালিয়ে ধোঁয়া গ্রহণ করলে।
        \n
১৩. মুখ ভর্তি বমি গিলে ফেললে।
        \n
১৪. রাত আছে মনে করে সুবহে সাদিকের পর পানাহার করলে।
        \n
১৫. মুখে পান রেখে ঘুমিয়ে পড়ে সুবহে সাদিকের পর জাগরিত হলে।
        \n
    </string>
    <string name="surakapuronbangla">
         বাংলা উচ্চারণঃ
        \n
        বিসমিল্লাহির রহমানির রাহিম।
        \n
        কুল ইয়া আইউহাল কাফিরূন।
        \n
        লা আ’বুদু মাতাবুদুন।
        \n
        ওয়ালা আনতুম আবিদুনা মা আবুদ।
        \n
        ওয়া লা আনা আবিদুনা মা আবাদতুম।
        \n
        ওয়ালা আনতুম আবিদুনা মাআবুদ।
        \n
        লাকুম দীনুকুম ওয়ালীয়া দ্বীন।
        \n\n
    </string>
    <string name="kapuronbangla">
        অর্থঃ
        পরম করুণাময় ও অসীম দয়ালু আল্লাহর নামে শুরু করছি।
        \n
        বলুন, হে কাফেরকূল,
        \nআমি এবাদত করি না,
        \n
        তোমরা যার এবাদত করো।
        \n
        এবং তোমরাও এবাদতকারী নও,
        \n
        যার এবাদত আমি করি এবং আমি এবাদতকারী নই,
        \n
        যার এবাদত তোমরা কর। তোমরা এবাদতকারী নও,
        \n
        যার এবাদত আমি করি।
        \n
        তোমাদের কর্ম ও কর্মফল তোমাদের জন্যে এবং আমার কর্ম ও কর্মফল আমার জন্যে।
    </string>
</resources>