<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiveNamajTasbi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="35dp"
            android:background="#2E94FA"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:layout_marginVertical="7dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="9dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="পাঁচ ওয়াক্ত নামাজের তাসবিহ"
                        android:textColor="#F44336"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"
                        android:text="@string/tasbi_fagar"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView1" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"

                        android:text="@string/tasbi_johor"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView2" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"

                        android:text="@string/tasbi_asor"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView3" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"
                        android:text="@string/tasbi_magrib"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView4" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"
                        android:text="@string/tasbi_isea"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView5" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:layout_marginVertical="7dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="9dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="মোনাজাত বাংলায় :"
                        android:textColor="#F44336"

                        android:textSize="25dp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/textView6" />

                    <TextView
                        android:id="@+id/textView58"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"
                        android:text="رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً وَفِي الْآخِرَةِ حَسَنَةً وَقِنَا عَذَابَ النَّارِ"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView7" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"

                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"
                        android:text="(রাব্বানা আ-তিনা ফিদ্দুনইয়া হাসানাওঁ ওয়াফিল আখিরাতি হাছানাতাওঁ ওয়াকিনা আজাবান্নার। ওয়া সাল্লাল্লাহু- তাআলা আলা খাইরি খালক্বিহী মুহাম্মাদিওঁ ওয়া আ-লিহি ওয়াআছহাবিহী আজমায়ীন। বিরাহমাতিকা ইয়া আরিহামার রাহিমীন।)"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView7" />

                    <TextView
                        android:id="@+id/textView68"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/bb"
                        android:gravity="start"
                        android:text="বাংলা অনুবাদঃ হে পরওয়ারদেগার! আমাদিগকে দুনয়াতেও কল্যাণ দান কর এবং আখেরাতেও কল্যাণ দান কর এবং আমাদিগকে দোযখের আযাব থেকে রক্ষা কর।
(সূরাঃ আল বাকারা, আয়াতঃ ২০১)
"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        app:layout_constraintTop_toBottomOf="@id/textView7" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5861635784906387/1336766588"></com.google.android.gms.ads.AdView>
</RelativeLayout>